# image_evaluate

./: README.md
eva_img/: CMakeLists.txt  package.xml
eva_img/src/: image_quality_evaluator.cpp
